<resources>
    <string name="app_name">Restaurant Application</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="add">Add</string>
    <string name="please_fill_in_the_details">Please fill in the details</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="ratings">Ratings</string>
</resources>