<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddScreen">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/please_fill_in_the_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/r_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/restaurant_name"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp" />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:id="@+id/loc"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:id="@+id/phone"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:id="@+id/desc"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"

        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rating"
        android:id="@+id/rating"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        />


        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnadd"

            />





</LinearLayout>